--- a/src/main/resources/application-sandbox.properties
+++ b/src/main/resources/application-sandbox.properties
@@ -9,3 +9,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
+
+#Enviroment variables
+api.security.token.secret=${JWT_SECRET:my-secret-key}
