--- a/src/main/resources/application-sandbox.properties
+++ b/src/main/resources/application-sandbox.properties
@@ -1,6 +1,6 @@
 # DATASOURCE
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/users_repo_sendbox
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/login
 spring.datasource.username=root
 spring.datasource.password=
 
