--- a/src/main/resources/application-sandbox.properties
+++ b/src/main/resources/application-sandbox.properties
@@ -12,3 +12,4 @@ spring.jpa.hibernate.ddl-auto=none
 
 #Enviroment variables
 api.security.token.secret=${JWT_SECRET:my-secret-key}
+api.security.token.issuer=${JWT_ISSUER:gomaker3d-login-api}
