--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.inovector3d</groupId>
 	<artifactId>loginapi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>filemanager</name>
-	<description>File manager for GoMaker3D</description>
+	<name>loginapi</name>
+	<description>Login api for GoMaker3D</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
