--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,10 +1,8 @@
 # DATASOURCE
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/login
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.hikari.maximum-pool-size=10
-
+spring.datasource.url=jdbc:mysql://inovector3d.com.br:3306/inove439_login?useSSL=false
+spring.datasource.username=inove439_webmaster
+spring.datasource.password=#Inovector3d@
 
 # JPA, SQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
