--- a/src/main/resources/application-productiontest.properties
+++ b/src/main/resources/application-productiontest.properties
@@ -1,16 +1,15 @@
 # DATASOURCE
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/login
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.url=jdbc:mysql://sql9.freemysqlhosting.net:3306/sql9646172
+spring.datasource.username=sql9646172
+spring.datasource.password=XHuSltWyPi
 
 
 # JPA, SQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 
 #Enviroment variables
 api.security.token.secret=${JWT_SECRET:my-secret-key}
