Adding user crud

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,8 +1,8 @@
 # DATASOURCE
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://inovector3d.com.br:3306/inove439_login?useSSL=false
-spring.datasource.username=inove439_webmaster
-spring.datasource.password=#Inovector3d@
+spring.datasource.url=jdbc:mysql://192.185.211.8:3306/skipcr49_portf_loginapi?useSSL=false
+spring.datasource.username=skipcr49_portf
+spring.datasource.password=skip#portf
 
 # JPA, SQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -13,4 +13,5 @@ spring.jpa.hibernate.ddl-auto=none
 #Enviroment variables
 api.security.token.secret=${JWT_SECRET:my-secret-key}
 api.security.token.issuer=${JWT_ISSUER:gomaker3d-login-api}
+api.security.refreshExpirationMs=300000
 
