--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,8 +1,8 @@
 # DATASOURCE
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.185.211.8:3306/skipcr49_portf_loginapi?useSSL=false
-spring.datasource.username=skipcr49_portf
-spring.datasource.password=skip#portf
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PWD}
 
 # JPA, SQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
 
 #Enviroment variables
-api.security.token.secret=${JWT_SECRET:my-secret-key}
-api.security.token.issuer=${JWT_ISSUER:gomaker3d-login-api}
+api.security.token.secret=${JWT_SECRET}
+api.security.token.issuer=${JWT_ISSUER}
 api.security.refreshExpirationMs=300000
 
